[package]
name = "canvas-node"
version = "0.1.0"
authors = ["Canvas"]
build = "build.rs"
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = "0.4.8"
serde = { version = "1.0.101", features = ["derive"] }
structopt = "0.3.8"
codec = { package = "parity-scale-codec", version = "2.0.0" }
hex-literal = "0.2.1"

# Substrate dependencies
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.5" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5" }
pallet-contracts = { git = "https://github.com/paritytech/substrate", package = "pallet-contracts" , branch = "polkadot-v0.9.5" }

# These dependencies are used for the node's RPCs
jsonrpc-core = "15.1.0"
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", package = "substrate-frame-rpc-system" , branch = "polkadot-v0.9.5" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", package = "pallet-transaction-payment-rpc" , branch = "polkadot-v0.9.5" }
pallet-contracts-rpc = { git = "https://github.com/paritytech/substrate", package = "pallet-contracts-rpc" , branch = "polkadot-v0.9.5" }

# Cumulus dependencies
cumulus-client-cli = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.5" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.5" }
cumulus-client-collator = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.5" }
cumulus-client-service = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.5" }
cumulus-client-network = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.5" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.5" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.5"}

# Polkadot dependencies
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.5" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.5" }
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.5" }
polkadot-test-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.5" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.5" }

canvas-runtime = { version = "0.1.0", path = "../runtime" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", package = "substrate-build-script-utils" , branch = "polkadot-v0.9.5" }

[[bin]]
name = "canvas"
path = "src/main.rs"
